# mesh-rand

./: Cargo.toml  README.md  TODO.txt
src/: errors.rs  lib.rs  mesh.rs  meshsurface.rs  vecmath.rs
src/surface/: mod.rs  poisson_disk.rs  uniform.rs
